--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -141,7 +141,7 @@
                             <h3 class="billing-block__title-two">Apply Coupon to get discount!</h3>
                             <div class="billing-block__code code-block">
                                 <input type="text" name="coupon-code" class="code-block__input" placeholder="Coupon code">
-                                <button type="button" class="code-block__button">Apply Code</button>
+                                <button type="submit" class="code-block__button">Apply Code</button>
                             </div>
                         </form>
                     </div>
