--- a/lesson_18/page_one.html
+++ b/lesson_18/page_one.html
@@ -142,7 +142,7 @@
                                     <div class="column__body">
                                         <div class="column__img">
                                             <a href="#" class="column__link">
-                                                <img src="img/page_one/topics/02.jpg" alt="Image"
+                                                <img src="img/page_one/topics/02.jpg" alt="Image">
                                             </a>
                                         </div>
                                         <div class="column__content">
