--- a/lesson_18/page_one.html
+++ b/lesson_18/page_one.html
@@ -19,7 +19,7 @@
                                     <li class="menu__item active">
                                         <a href="#" class="menu__link">Resources</a>
                                     </li>
-                                    <li class="menu__item menu__item_arrow">
+                                    <li class="menu__item menu__item-arrow">
                                         <a href="#" class="menu__link">Inspiration</a>
                                         <div class="menu__sub-menu sub-menu">
                                             <ul class="sub-menu__list">
@@ -38,7 +38,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="menu__item menu__item_arrow">
+                                    <li class="menu__item menu__item-arrow">
                                         <a href="#" class="menu__link">Courses</a>
                                         <div class="menu__sub-menu sub-menu">
                                             <ul class="sub-menu__list">
@@ -68,7 +68,7 @@
                         </div>
                         <div class="header__btn-wrapper">
                             <button type="button" class="header__button">Sign in</button>
-                            <button type="button" class="header__button header__button_active">Get Started</button>
+                            <button type="button" class="header__button header__button-active">Get Started</button>
                         </div>
                         <button type="button" class="header-icon">
                             <span></span>
