--- a/lesson_20/index.html
+++ b/lesson_20/index.html
@@ -78,7 +78,7 @@
 						<div class="shop-block__container">
 							<div class="shop-block__filter">
 								<h4 class="shop-block__title">Shop Some Wear:</h4>
-								<form action class="shop-block__form form-shop">
+								<form class="shop-block__form form-shop">
 									<div class="form-shop__input">
 										<input type="checkbox" id="best" name="best">
 										<label for="best">Best sellers</label>
