--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -7,8 +7,7 @@
 		<title>Lesson 8</title>
 	</head>
 	<body>
-			<header class="header">
-			</header>
+	<header class="header"></header>
             <main>
                 <div class="one-block">
                     <div class="one-block__container">
@@ -81,7 +80,7 @@
                             <p class="price">Staret From $299</p>
                             <h2>Ultra HD Quality Bluetooth Sound Speakers</h2>
                             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ornare vestibulum mollis. Nam vitae augue purus.</p>
-                            <a href="" class="button">Shop Now</a>
+                            <a href="#" class="button">Shop Now</a>
                         </div>
                         <div class="three-block__image">
                             <img src="img/three_block/01.png" alt="Image">
@@ -89,7 +88,6 @@
                     </div>
                 </div>
             </main>
-            <footer class="footer">
-			</footer>
+            <footer class="footer"></footer>
 	</body>
 </html>
